--- a/Mini Projects/Batman Website/styleIndex.css
+++ b/Mini Projects/Batman Website/styleIndex.css
@@ -6,7 +6,7 @@
 
 body{
     width: 100%;
-    margin: 0;
+    height: 100%;
     overflow: hidden;
     background-color: rgb(214, 214, 3);
 }
@@ -14,7 +14,7 @@ body{
 .header{
     margin:5px 5px 0px 5px;
     border-radius: 18px;
-    height: 60px;
+    /* width: 100%; */
     background-color: black;
     display: flex;
     align-items: center;
@@ -58,6 +58,16 @@ body{
     transition: all 0.15s ease;
     transform-origin: center;
 }
+
+.header .hamburger img{
+    height: 2.5em;
+    width: 2.5em;
+}
+.header .hamburger{
+    position: relative;
+    right: 1em;
+    display: none;
+}
 .welcome-msg{
     margin: 5px 5px 5px 5px;
     display: flex;
@@ -73,3 +83,13 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+@media screen and (max-width:500px){
+    .header .hamburger{
+        display: block;
+    }
+    .header .nav{
+        display: none;
+    }
+}
+    
